# spider-bead-pull

./: .gitignore  5_Analysis_Boostfactor_Determination_Spider_ET copy.ipynb  5_Analysis_Boostfactor_Determination_Spider_ET.ipynb  README.md  adaptive bead pull .ipynb  adaptive bead pull.ipynb  adaptive_bead_pull_variations.ipynb  boostfactor calculation.ipynb  boostfactor calculation_old.ipynb  boostfactor_calculation_python.ipynb  calibrate_bead_pull.ipynb  call_julia.ipynb  compare_s22_string_test.ipynb  pyproject.toml  run_bead_pull_measurement.py  stepper_motor_test.ipynb
assets/: README.md  build_diagrams.py
assets/sources/: 01_repo_purpose_and_inputs.dot  02_notebook_execution_flow.dot  03_single_configuration_reconstruction.dot  05_figs_folder_guide.dot  06_data_folder_guide.dot  diagram_text.json  folder_labels.json  physics_text.json  theme.json
config/: bead_pull_calibration.json  measurement_config.json
data/: ET_results.npz  beam_fit_results_all_z_m.pkl  beam_fit_results_all_z_mm.pkl  beam_fit_results_complex.pkl
scripts/: SpiderETVariationFit.jl  run_spider_et_variation_fit.jl
scripts/slurm/: assemble.sbatch  config_array.sbatch  full_reference.sbatch  render_notebook.sbatch  submit_spider_et_variation_production.sh
src/: __init__.py  adaptive_bead_pull.py  bead_pull_controller.py
